--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#FFC16D</color>
     <color name="grey">#E9E9E9</color>
+    <color name="red">#FF0000</color>
 </resources>
