--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,6 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:text="LOGIN NOW"
+        android:background="@drawable/button_melengkung_yellow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -87,6 +88,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:text="Sign UP"
+        android:textColor="@color/yellow"
+        android:background="@drawable/button_melengkung_yellow"
+        android:theme="@style/buttonstyle1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
