--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,6 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:text="SIGN UP NOW"
+        android:background="@drawable/button_melengkung_yellow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
